# loom

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  Status.md  build_errors.txt  build_errors2.txt  emit_test.rs  forgecraft.yaml  railway.toml  test_results.txt
.claude/: core.md  index.md  settings.json  settings.local.json
.claude/hooks/: commit-msg.sh  pre-commit-branch-check.sh  pre-commit-clippy.sh  pre-commit-compile.sh  pre-commit-coverage.sh  pre-commit-format.sh  pre-commit-function-length.sh  pre-commit-import-cycles.sh  pre-commit-prod-quality.sh  pre-commit-review.sh  pre-commit-secrets.sh  pre-commit-tdd-check.sh  pre-commit-test.sh  pre-exec-safety.sh
.claude/standards/: api.md  architecture.md  cicd.md  protocols.md  spec.md  testing.md
.copilot/: mcp-config.json
.forgecraft/: exceptions.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  gs_t5_prompt.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: alx-convergence.yml  ci.yml  evolve.yml
corpus/: di_demo.loom  inline_demo.loom  invellum.loom  pricing_engine.loom  user_service.loom
docs/: PRD.md  TechSpec.md  alx-definition.md  bioiso-biology-critique.md  bioiso-biology-review.md  bioiso-concept.md  bioiso-finance-design.md  bioiso-gs-attributes.md  bioiso-loom-convergence.md  deploy-railway.md  foundations.md  getting-started.md  invellum-fitness-oracle.md  language-spec.md  lifecycle.md  lineage.md  loom-spec-session-completo.md  manual.md  pln.md  primer.md  prove-emitted-properties.md  roadmap.md  state-of-loom.md  stdlibs.md  taxonomy.md  use-cases.md  verification-matrix.md  what-is-loom.md
docs/adrs/: ADR-000-cnt-init.md  ADR-0002-recursive-descent-parser.md  ADR-0003-flat-ast-design.md  ADR-0004-sequential-checker-pipeline.md  ADR-0005-biological-paradigm-mapping.md  ADR-0006-checker-interface-contract.md  ADR-0007-ganglionic-monitoring.md  ADR-0008-spec-deferrals.md  ADR-0009-grammar-disjointness-template-codegen.md  ADR-001-rust-implementation.md  ADR-0010-bioiso-runtime-architecture.md  ADR-0011-ceks-runtime-architecture.md  ADR-0012-genetic-memory-gauntlet-bioiso-runner.md  README.md
docs/diagrams/: c4-container.md  c4-context.md  flow-primary.md  sequence-primary.md  state-primary.md
docs/experiment/: amr-coevolution.md
docs/publish/: article.md  bioiso-paper.html  bioiso-paper.md  launch-posts.md  living-apps-paper.md  publication-plan.md  release-notes-v0.2.0.md  white-paper.md
editors/vscode/: package.json
examples/: 01-hello-contracts.loom  02-payment-api.loom  03-typestate-lifecycle.loom  04-finance-gbm.loom  05-autonomous-agent.loom  ladder.loom
examples/cross/: crispr_telomere.loom  (+4 more)
experiments/alx/derived/: Cargo.toml  loom.toml
experiments/alx/derived/corpus/: collections_demo.loom  pricing_engine.loom  user_service.loom  wasm_demo.loom
experiments/alx/derived/corpus/project/: math.loom  stats.loom
experiments/alx/derived/src/: ast.rs  error.rs  lib.rs  lsp.rs  main.rs  project.rs
experiments/alx/derived/src/checker/: algebraic.rs  effects.rs  exhaustiveness.rs  inference.rs  infoflow.rs  mod.rs  privacy.rs  safety.rs  teleos.rs  types.rs  typestate.rs  units.rs
experiments/alx/derived/src/codegen/: json_schema.rs  mod.rs  neuroml.rs  openapi.rs  rust.rs  simulation.rs  typescript.rs  wasm.rs
experiments/alx/derived/src/lexer/: mod.rs
experiments/alx/derived/src/parser/: mod.rs
experiments/alx/derived/tests/: autopoiesis_test.rs  autopoietic_test.rs  being_test.rs  coercion_test.rs  describe_test.rs  di_test.rs  e2e_test.rs  effect_test.rs  generics_test.rs  inline_test.rs  integration_test.rs  interface_test.rs  lsp_test.rs  neuroml_test.rs  project_test.rs  safety_test.rs  selfmod_test.rs  simulation_test.rs  stdlib_test.rs  testblock_test.rs  typescript_test.rs  typestate_test.rs  units_test.rs
scripts/: setup-hooks.sh  split_parser.py  start-colony.sh
src/: ast.rs  error.rs  lib.rs  lsp.rs  main.rs  project.rs
tests/: algebraic_test.rs  alx_convergence_test.rs  alx_runner_test.rs  annotation_decl_test.rs  aspect_test.rs  autopoiesis_test.rs  autopoietic_test.rs  being_test.rs  bioiso_constructs_test.rs  canalization_test.rs  category_test.rs  checkpoint_test.rs  cli_test.rs  coercion_test.rs  correctness_report_test.rs  criticality_test.rs  curryhow_test.rs  degeneracy_test.rs  dependent_test.rs  describe_test.rs  di_test.rs  e2e_test.rs  ecosystem_test.rs  effect_test.rs  errorcorrection_test.rs  evolve_test.rs  exhaustiveness_test.rs  generics_test.rs  gradual_test.rs  hgt_test.rs  inference_test.rs  infoflow_test.rs  inline_test.rs  integration_test.rs  interface_test.rs  invariant_test.rs  iteration_test.rs  lpn_test.rs  lsp_test.rs  m100_test.rs  (+112 more)
(+331 files in other folders)
