[package]
name = "loom"
version = "0.1.0"
edition = "2021"
description = "Loom language compiler: transpiles Loom source to Rust"
license = "MIT"

[[bin]]
name = "loom"
path = "src/main.rs"

[[bin]]
name = "loom-lsp"
path = "src/bin/loom_lsp.rs"

[lib]
name = "loom"
path = "src/lib.rs"

[features]
default = ["core"]
core = []
smt = []
temporal = []
separation = []
full = ["smt", "temporal", "separation"]

[dependencies]
logos    = "0.15"
thiserror = "2"
clap     = { version = "4", features = ["derive"] }
tower-lsp = "0.20.0"
tokio = { version = "1.51.0", features = ["io-std", "macros", "rt-multi-thread"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
