[package]
name = "warp-lang"
version = "0.2.0"
edition = "2021"
description = "Warp — an AI-native functional language that compiles to Rust, TypeScript, WebAssembly, OpenAPI 3.0, and JSON Schema with built-in correctness guarantees"
license = "MIT"
homepage = "https://pragma.works/loom"
repository = "https://github.com/PragmaWorks/loom"
documentation = "https://docs.rs/loom"
readme = "README.md"
keywords = ["compiler", "language", "ai-native", "correctness", "transpiler"]
categories = ["compilers", "development-tools", "command-line-utilities"]
exclude = [
  "experiments/",
  "corpus/",
  "mutants.out/",
  "mutants.out.old/",
  "out/",
  "target/",
  ".claude/",
]

[[bin]]
name = "loom"
path = "src/main.rs"

[[bin]]
name = "loom-lsp"
path = "src/bin/loom_lsp.rs"

[lib]
name = "loom"
path = "src/lib.rs"

[features]
default = ["core"]
core = []
smt = []
temporal = []
separation = []
full = ["smt", "temporal", "separation"]
loom_proptest = []
loom_statrs = []

[dependencies]
logos    = "0.15"
thiserror = "2"
clap     = { version = "4", features = ["derive"] }
tower-lsp = "0.20.0"
tokio = { version = "1.51.0", features = ["io-std", "macros", "rt-multi-thread"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
regex    = "1"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"

[profile.release]
opt-level = 3
