[package]
name = "warp-lang"
version = "0.2.0"
edition = "2021"
description = "Warp — an AI-native functional language that compiles to Rust, TypeScript, WebAssembly, OpenAPI 3.0, and JSON Schema with built-in correctness guarantees"
license = "MIT"
homepage = "https://pragma.works/loom"
repository = "https://github.com/PragmaWorks/loom"
documentation = "https://docs.rs/loom"
readme = "README.md"
keywords = ["compiler", "language", "ai-native", "correctness", "transpiler"]
categories = ["compilers", "development-tools", "command-line-utilities"]
exclude = [
  "experiments/",
  "corpus/",
  "mutants.out/",
  "mutants.out.old/",
  "out/",
  "target/",
  ".claude/",
]

[[bin]]
name = "loom"
path = "src/main.rs"

[[bin]]
name = "loom-lsp"
path = "src/bin/loom_lsp.rs"

[[bin]]
name = "bench_dsatur"
path = "src/bin/bench_dsatur.rs"

[[bin]]
name = "bench_ffd"
path = "src/bin/bench_ffd.rs"

[[bin]]
name = "bench_spt"
path = "src/bin/bench_spt.rs"

[[bin]]
name = "bench_tsp_sa"
path = "src/bin/bench_tsp_sa.rs"

[[bin]]
name = "bench_knapsack_ga"
path = "src/bin/bench_knapsack_ga.rs"

[[bin]]
name = "bench_vrp_pso"
path = "src/bin/bench_vrp_pso.rs"

[[bin]]
name = "bench_hyper_scheduler"
path = "src/bin/bench_hyper_scheduler.rs"

[[bin]]
name = "bench_bayesian_opt"
path = "src/bin/bench_bayesian_opt.rs"

[[bin]]
name = "bench_neural_tsp"
path = "src/bin/bench_neural_tsp.rs"

[lib]
name = "loom"
path = "src/lib.rs"

[features]
default = ["core", "smt"]
core = []
smt = []
temporal = []
separation = []
full = ["smt", "temporal", "separation"]
loom_proptest = []
loom_statrs = []

[dependencies]
logos    = "0.15"
thiserror = "2"
clap     = { version = "4", features = ["derive"] }
tower-lsp = "0.20.0"
tokio = { version = "1.51.0", features = ["io-std", "macros", "rt-multi-thread"] }
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
regex    = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
libc = "0.2"
base64 = "0.22.1"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"

[profile.release]
opt-level = 3
