[package]
name = "loom"
version = "0.1.0"
edition = "2021"

[lib]
name = "loom"
path = "src/lib.rs"

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
logos      = "0.15"
thiserror  = "2"
serde      = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"


